# klujax-ffi

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  pyproject.toml
klujax_ffi/: klujax.cc  klujax.cpp  rms_norm.py
src/klujax_ffi/: __init__.py  klujax.cc  klujax.cpp  klujax.py
tests/: klujax_test.py  rms_norm_test.py
